--- a/index.html
+++ b/index.html
@@ -382,7 +382,8 @@
             <!-- Left Column - Content -->
             <div class="w-full lg:w-1/2 mb-10 sm:mb-12 md:mb-0 lg:mb-0 slide-up">
                 <h1 class="font-heading text-3xl xs:text-4xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold mb-4 sm:mb-5 md:mb-6 typewriter leading-tight md:leading-snug">
-                    Master AI Prompt Engineering
+                    Master AI Prompt 
+                    <br class='lg:hidden sm:block'> Engineering
                 </h1>
                 <p class="text-base sm:text-lg md:text-xl lg:text-xl xl:text-2xl mb-6 sm:mb-7 md:mb-8 text-indigo-100 leading-relaxed md:leading-loose">
                     Learn the exact formulas to get perfect results from AI assistants like ChatGPT, Claude, and DeepSeek.
@@ -409,7 +410,7 @@
                     <!-- Glass Card -->
                     <div class="relative glass-effect p-4 sm:p-6 md:p-8 lg:p-6 xl:p-8 rounded-xl sm:rounded-2xl shadow-xl sm:shadow-2xl w-full">
                         <div class="text-center mb-4 sm:mb-5 md:mb-6">
-                            <i class="fas fa-robot text-3xl sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl text-white"></i>
+                            <i class="fas fa-robot text-3xl sm:text-4xl md:text-5xl lg:text-4xl xl:text-5xl text-black"></i>
                         </div>
                         
                         <!-- Before Example -->
