Update heading size for improved responsiveness

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         <div class="flex flex-col lg:flex-row items-center">
             <!-- Left Column - Content -->
             <div class="w-full lg:w-1/2 mb-10 sm:mb-12 md:mb-0 lg:mb-0 slide-up">
-                <h1 class="font-heading text-3xl xs:text-4xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold mb-4 sm:mb-5 md:mb-6 typewriter leading-tight md:leading-snug">
+                <h1 class="font-heading lg:text-2xl xs:text-4xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold mb-4 sm:mb-5 md:mb-6 typewriter leading-tight md:leading-snug">
                     Master AI Prompt 
                     <br class='lg:hidden sm:block'> Engineering
                 </h1>
